--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.53",
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "ai": "^5.0.77",
     "amqplib": "^0.10.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
